test/libsolidity/syntaxTests/nameAndTypeResolution/316_fixed_type_invalid_implicit_conversion_lost_data.sol
contract test {
    function f() public {
        ufixed256x1 a = 1/3; a;
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
